<resources>
    <string name="app_name">Bogotravel</string>
    <string name="imagen">Biblioteca</string>
    <string name="titulo">BIBLIOTECA VIRGILIO BARCO</string>
    <string name="informacion">La biblioteca Virgilio Barco es un lugar especial para los que les gusta apreciar el arte de la arquitectura. Este magnífico edificio creado por el arquitecto Rogelio Salmona es un espacio cultural abierto a toda clase de público y lleva nombre de uno de los expresidentes de la nación. Alrededor de la biblioteca se encuentran varios sitios de interés que permite a los visitantes desarrollar otras actividades.</string>
    <string name="temperatura">Temperatura: 18°</string>
    <string name="boton">PLANES</string>

    <string name="foto">foto</string>
    <string name="nombre_poi">nombre_poi</string>
    <string name="descripcorta">Usaquén está ubicada al norte de Bogotá y es un popular paraje para descubrir la ciudad.</string>
    <string name="valoracion">*****</string>
    <string name="USAQUEN" />

    <!-- Sync Preferences -->
    <string name="notifications">Notificaciones</string>
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_list">Lista</string>
    <string name="title_detail">Detalle</string>
    <string name="title_preference">Preferencias</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Bogotravel</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash">Splash</string>
    <string name="imagen_splash" />
    <string name="login">Iniciar sesión</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="repeat_password">Repita la contrseña</string>
    <string name="register">Crear cuenta</string>
    <string name="username">Nombre de usuario</string>
    <string name="dont_have_account"><u> No tienes cuenta Registrate</u> </string>
    <string name="sign_out">Cerrar Sesión</string>

</resources>